# python-podman-dependabot-test

./: LICENSE  README.md  build-container.sh  build.Containerfile  pyproject.toml  pytest.ini  requirements.txt  run-quick.sh  run.Containerfile  run.sh  test-ci.sh  test-quick.sh  test.Containerfile  test.sh  update-lockfile.sh
.github/workflows/: auto-merge-dependabot.yml  build-oci.yml
src/python_podman_dependabot_test/: cmdline.py  main.py
tests/: requirements.txt  test_smoke.py
